# apps/api/src/modules/shared-modules/index.ts
@@ -1,6 +1,7 @@
 import { AuthRootModule } from './auth/index.js';
 import { ConfigModule } from './config/index.js';
 import { PrismaModule } from './database/index.js';
+import { EvidenceModule } from './evidence/index.js';
 import { HealthModule } from './health/index.js';
 import { PushInfrastructureModule } from './push/index.js';
 import { ReminderDispatchModule } from './reminders/index.js';
@@ -9,6 +10,7 @@ export default [
   ConfigModule,
   PrismaModule,
   AuthRootModule,
+  EvidenceModule,
   PushInfrastructureModule,
   ReminderDispatchModule,
   HealthModule,
